[package]
name = "airtosupply-art"
version = "0.1.0"
edition = "2021"
description = "airtosupply art"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# [profile.dev]
# opt-level = 0

# [profile.release]
# opt-level = 3
